; ModuleID = '/home/carl/AnghaBench/mpv/stream/extr_stream_libarchive.c_standard_volume_url.c'
source_filename = "/home/carl/AnghaBench/mpv/stream/extr_stream_libarchive.c_standard_volume_url.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bstr = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i8*, i32, i32)* @standard_volume_url to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @standard_volume_url(i8* %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.bstr, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = getelementptr inbounds %struct.bstr, %struct.bstr* %5, i32 0, i32 0
  store i32 %2, i32* %9, align 4
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %10 = load i8*, i8** %6, align 8
  %11 = load i8*, i8** %7, align 8
  %12 = getelementptr inbounds %struct.bstr, %struct.bstr* %5, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @BSTR_P(i32 %13)
  %15 = load i32, i32* %8, align 4
  %16 = call i8* @talloc_asprintf(i8* %10, i8* %11, i32 %14, i32 %15)
  ret i8* %16
}

declare dso_local i8* @talloc_asprintf(i8*, i8*, i32, i32) #1

declare dso_local i32 @BSTR_P(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
